--- a/style.css
+++ b/style.css
@@ -74,3 +74,18 @@ body {
     padding: 10px;
     margin: 0;
 }
+
+.grey-overlay {
+    background-color: #3a3a3c !important;
+    border: none !important;
+}
+
+.yellow-overlay {
+    background-color: #b59f3a !important;
+    border: none !important;
+}
+
+.green-overlay {
+    background-color: #538d4a !important;
+    border: none !important;
+}
